--- a/css/home.css
+++ b/css/home.css
@@ -1,26 +1,18 @@
 .home{
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.home::before{
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
     background-image: url(../img/background.png);
     background-repeat: no-repeat;
     background-size: cover;
-    filter: grayscale(100%);
+    box-shadow: inset 0px -40px 40px #000;
 }
 .profile{
     z-index: 1;
     display: flex;
     align-items: center;
     gap: 48px;
-}
-.profile__foto{
-    filter: grayscale();
 }
 .profile__text{
     font-size: 2.25rem;
