--- a/css/sobre-mim.css
+++ b/css/sobre-mim.css
@@ -9,7 +9,17 @@
     grid-template-columns: 1fr 1fr;
     gap: 64px;
 }
-.section-title{
+.description{
+    grid-area: description;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+.description__title{
+    font-size: 3rem;
+    color: var(--primary-color);
+}
+.section__title{
     grid-area: title;
     font-size: 220px;
     text-align: center;
@@ -18,11 +28,40 @@
     -webkit-background-clip: text;
     color: transparent;
 }
-.description{
-    grid-area: description;
-    background-color: bisque;
+.description__text{
+    width: 85%;
+    font-size: 1.5rem;
+    line-height: 150%;
 }
 .skills{
     grid-area: skills;
-    background-color: aquamarine;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+.skills__title{
+    font-size: 3rem;
+    color: var(--primary-color);
+}
+.skills__icons{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+}
+.skills__icon{
+    width: 150px;
+    height: 150px;
+    background-color: var(--icon-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+}
+.skills__icon i{
+    font-size: 2.5rem;
+}
+.skills__icon span{
+    font-size: 16px;
 }
