--- a/css/sobre-mim.css
+++ b/css/sobre-mim.css
@@ -8,6 +8,7 @@
     grid-template-rows: auto 1fr;
     grid-template-columns: 1fr 1fr;
     gap: 64px;
+    height: auto;
 }
 .description{
     grid-area: description;
